trying to fix header width on mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -780,7 +780,7 @@ footer a:hover {
       position: fixed;
       top: 8px;
       left: 2px;
-      width: 69%;
+      width: 100%;
     }
 
     .line-seperator {
